kubernetes/app/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: mrrfifa/soccer-club-admin
          ports:
            - containerPort: 3002
---

apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin
  type: NodePort
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
