kubernetes/app/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mrrfifa/soccer-club-client
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    # nodePort: 30001
