kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  rules:
    - host: urclubingress.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
